--- a/app/src/main/res/layout/activity_postmethod.xml
+++ b/app/src/main/res/layout/activity_postmethod.xml
@@ -6,4 +6,14 @@
     android:layout_height="match_parent"
     tools:context=".Postmethod">
 
+    <TextView
+        android:id="@+id/textView3"
+        android:layout_width="182dp"
+        android:layout_height="494dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.135" />
 </androidx.constraintlayout.widget.ConstraintLayout>
